<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocalIntegration</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>    
    <string name="sina_text_share">文字分享</string>
    <string name="sina_text_image_share">图片文字分享</string>
    <string name="tecent_share">腾讯微博分享</string>
    <string name="sina_authorize">单点授权</string>
    <string name="sina_o2authorize">2.0授权</string>
    <string name="sina">新浪微博</string>
    <string name="tecent">腾讯微博</string>
    <string name="tecent_text_share">文字分享</string>
    <string name="tecent_text_image_share">图片文字分享</string>
	<string name="tecent_authorize">单点授权</string>
	<string name="weixin_regist">注册到微信</string>
	<string name="weixin_text_share">分享文字到微信</string>
	<string name="weixin_text_image_share">分享图片文字到微信</string>
	<string name="weixin">微信</string>
</resources>