<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <Button
        android:id="@+id/sina_ssoauthorize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sina_authorize"
        />
    
    <Button
        android:id="@+id/sina_o2authorize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sina_o2authorize"
        />
        

    <Button
        android:id="@+id/sina_share_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sina_share" />
    <Button
        android:id="@+id/tecent_share_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tecent_share"
        />
    
</LinearLayout>
