<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<Button
        android:id="@+id/tecent_ssoauthorize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tecent_authorize"
        />
    
    <Button
        android:id="@+id/tecent_text_share_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tecent_text_share" />
    
     <Button
        android:id="@+id/tecent_text_image_share_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tecent_text_image_share" />
</LinearLayout>
